--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "video-downloader",
   "version": "1.0.0",
+  "description": "Video downloader application",
+  "main": "setup.js",
   "type": "module",
-  "main": "server.js",
   "scripts": {
-    "start": "node setup.js",
-    "server": "node server.js"
+    "start": "node setup.js"
+  },
+  "engines": {
+    "node": ">=20.0.0 <21.0.0"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2"
   }
 }
