--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "video-downloader",
   "version": "1.0.0",
   "description": "Video downloader application",
-  "main": "setup.js",
   "type": "module",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node setup.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "engines": {
     "node": ">=20.0.0 <21.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
